--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "author": {
-    "name": "Iain Collins",
-    "email": "me@iaincollins.com",
-    "url": "http://iaincollins.com"
+    "name": "Son Roy Almerol",
+    "email": "sonroya.almerol@gmail.com",
+    "url": "https://snry.xyz"
   },
-  "name": "tabletojson",
-  "description": "Converts HTML tables to JSON objects",
-  "version": "2.0.4",
+  "name": "tabletojson-rn",
+  "description": "Converts HTML tables to JSON objects with RN Compatibility",
+  "version": "1.0.0",
   "main": "./dist/index.js",
   "keywords": [
     "table2json",
@@ -21,22 +21,22 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/maugenst/tabletojson.git"
+    "url": "git://github.com/sonroyaalmerol/tabletojson-rn.git"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
-    "got": "^10.7.0",
-    "tunnel": "0.0.6",
-    "snyk": "^1.316.1"
+    "node-fetch": "^2.6.0",
+    "snyk": "^1.316.1",
+    "tunnel": "0.0.6"
   },
   "license": "ISC",
   "devDependencies": {
     "@types/cheerio": "^0.22.17",
     "@types/express": "^4.17.4",
-    "@types/got": "^9.6.9",
     "@types/jest": "^25.2.1",
     "@types/lodash": "^4.14.149",
     "@types/node": "^13.11.0",
+    "@types/node-fetch": "^2.5.7",
     "@types/supertest": "^2.0.8",
     "config": "^3.3.1",
     "coveralls": "^3.0.11",
